fixed responsive overflow

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body
 	font-weight: 400;
 	text-decoration: none;
     text-transform: none;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar 
@@ -157,12 +158,27 @@ h3{
     margin-bottom: 2rem;
 }
 
-@media only screen and (max-width: 992px), (orientation: portrait){
+@media only screen and (max-width: 992px){
    .row{
        display: flex;
        flex-wrap: wrap;
 
    }
+   .container-slim{
+       width: 70%;
+   }
+}
+@media only screen and (max-width: 375px), (orientation: portrait){
+    .btn-grey{
+        padding: .7rem 1rem;
+    }
+    .btn-blue{
+        padding: .7rem 1rem;
+    }
+    .container-slim{
+        width: 90%;
+    }
+ 
 }
 
 
@@ -266,11 +282,11 @@ header{
         margin: 0 auto;
     }
     .header-btn-container{
-        width: 70%;
+        width: 100%;
         margin: 0 auto;
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: center;
+        background-color: yellow;
     }
     .header-img-container{
         width: 100%;
@@ -283,10 +299,7 @@ header{
         position: relative;
         left: 0;
     } 
-    .btn-grey{
-        margin-left: 0;
-        margin-top: .5rem;
-    }
+
 }
 
 
